make list for chicago bars, add to list

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>This Website is for a List of Things</title>
+  <title>Good Chicago Bars for Meetups</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Nunito" rel="stylesheet">
 </head>
@@ -10,15 +10,15 @@
 <body>
   <div class="container">
     <header>
-      <h1>This Website is for a List of Things</h1>
+      <h1>Good Chicago Bars for Meetups</h1>
     </header>
 
     <ul>
       <li>
-        <h2><a href="http://www.sheffieldschicago.com/">I'm a list item</a></h2>
-        <h4>I'm a subtitle</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis urna sapien. Maecenas metus velit, mollis vitae metus quis, dapibus auctor nulla. Nunc ac egestas nulla.</p>
-        <small>I'm some smol text</small>
+        <h2><a href="http://www.sheffieldschicago.com/">Sheffields</a></h2>
+        <h4>Lakeview</h4>
+        <p>Sheffields is easy to get to, and has an outdoor patio for nights with nice weather. There's also a spacious backroom when it's cold. Great beer list, plus they serve food.</p>
+        <small>Contributed by Savannah</small>
       </li>
     </ul>
 
