add map room to list

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <p>Sheffields is easy to get to, and has an outdoor patio for nights with nice weather. There's also a spacious backroom when it's cold. Great beer list, plus they serve food.</p>
         <small>Contributed by Savannah</small>
       </li>
+         <li>
+        <h2><a href="http://www.maproom.com/">Map Room</a></h2>
+        <h4>Bucktown</h4>
+        <p>Map Room has good beer and free pretzels! And if you come there early in the day sometimes there is charcuterie lying around.</p>
+        <small>Contributed by Cat</small>
+      </li>
     </ul>
 
     <footer>
