--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <small>Contributed by Cat</small>
       </li>
       <li>
-          <h2><a href="http://www.thedrifterchicago.com/">The Driver</a></h2>
+          <h2><a class="bar__brian" href="http://www.thedrifterchicago.com/">The Drifter</a></h2>
           <h4>River North</h4>
           <p>Awesome cocktails and performances every hours!</p>
           <small>Contributed by Brian Montana</small>
