--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
         <small>Contributed by Cat</small>
       </li>
       <li>
-          <h2><a class="bar__brian" href="http://www.thedrifterchicago.com/">The Drifter</a></h2>
+          <h2><a href="http://www.thedrifterchicago.com/">The Drifter</a></h2>
           <h4>River North</h4>
           <p>Awesome cocktails and performances every hours!</p>
+          <small>Contributed by Brian Montana</small>
+      </li>
+      <li>
+          <h2><a href="#">Simone's</a></h2>
+          <h4>Andersonville</h4>
+          <p>Wonderful dive bar with live music on Sundays and good people watching.</p>
           <small>Contributed by Brian Montana</small>
       </li>
     </ul>
